認証機能を追加

--- a/public/assessment.css
+++ b/public/assessment.css
@@ -17,3 +17,15 @@ button {
 input {
   height: 20px;
 }
+
+#user-area {
+  display: none;
+}
+
+#login-area {
+  display: none;
+}
+
+#register-area {
+  display: none;
+}
